Fixed cat border radius, added chevron down, made json mobile friendly

--- a/global.css
+++ b/global.css
@@ -4,6 +4,10 @@
     - Off-Black: #151414
 */
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     height: 100%;
     margin: 0;
