--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ section.section-banner {
     display: flex;
     height: 100vh;
     width: 100%;
+    position: relative;
 }
 
 div.banner-container {
@@ -36,6 +37,33 @@ div.socials-container a:hover {
     filter: drop-shadow(0 5px 15px rgba(0,0,0,.3));
     -webkit-transform: translateY(-5px);
     transform: translateY(-5px);
+}
+
+button.down-arrow {
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    transition: none;
+    transform: none;
+    -webkit-transform: none;
+
+    cursor: pointer;
+    color: #151414;
+    position: absolute;
+    bottom: 2rem;
+    
+    animation: MoveUpDown 2.5s ease-in-out infinite;
+}
+
+@keyframes MoveUpDown {
+    0%, 100% {
+      bottom: 2rem;
+    }
+
+    50% {
+      bottom: 1rem;
+    }
 }
 
 /* JSON */
@@ -234,6 +262,9 @@ div.cat-slideshow {
     overflow: hidden;
     width: 550px;
     height: 300px;
+}
+
+img.cat-img {
     border-radius: 1rem;
 }
 
